# cache

./: .gitignore  README.md  gr-cache_summary.md  polarcode_simulOFDM.grc
all_coderates/Shared Library/src/: CodingDecodingData.cpp  TxRx.cpp
all_coderates/Trasmission Scheme/: polarcode_complete.py  polarcode_ofdm_simul.py  polarcode_simulOFDM.grc  test1_polarcode.grc
all_coderates/Trasmission Scheme/mainGainResult/: gain_results.txt
all_coderates/cache/: make_cache.cpp
all_coderates/environment/: environment.cpp
codeboostheader/: map_header_payload_bc_impl.cc
docker/: Dockerfile  instructions.txt
gr-projectCACHE/: PolarDec_b_impl.cc
gr-projectCACHE/cmake/Modules/: projectCACHEConfig.cmake
gr-projectCACHE/examples/: coded_multicasting.grc  coded_multicasting.py  gain_results.txt
gr-projectCACHE/garbage/PolarCodingWithoutCaching/: PolarCodes_2users_v3.cpp  PolarDecStrong_b_impl.h  PolarDec_b_impl.cc  gain_bf_impl.h  polarEnc_b_impl.h  qa_projectCACHE.h
gr-projectCACHE/garbage/lib_new/: PolarDec_b_impl.h  Rx_1P_b_impl.cc  map_header_payload_bc_impl.h  polarEnc_b_impl.cc  qa_projectCACHE.cc  test_projectCACHE.cc
gr-projectCACHE/garbage/testing/: polarEnc_b_impl.cc
gr-projectCACHE/grc/: CMakeLists.txt  projectCACHE_PC_Error_Rate.xml  projectCACHE_PolarDec_b.xml  projectCACHE_crc32_1_bb.xml  projectCACHE_map_header_payload_bc.xml  projectCACHE_polarEnc_b.xml
gr-projectCACHE/grc/PolarCodingWithoutCaching/: CMakeLists.txt  projectCACHE_Rx_1P_b.xml
gr-projectCACHE/include/projectCACHE/: CMakeLists.txt  PolarDec_b.h  ofdm_frame_equalizer1_vcvc.h  polarEnc_b.h
gr-projectCACHE/include/projectCACHE/PolarCodingWithoutCaching/: PolarDecStrong_b.h
gr-projectCACHE/lib/: CMakeLists.txt  PolarDec_b_impl.cc  PolarDec_b_impl.h  PolarDec_b_impl_original.cc  Tx_1P_b_impl.h  map_header_payload_bc_impl.cc  ofdm_frame_equalizer1_vcvc_impl.cc  polarEnc_b_impl.cc  polarEnc_b_impl.h
gr-projectCACHE/lib/PolarCodingWithoutCaching/: CMakeLists.txt  PolarDec_b_impl.h  Rx_1P_b_impl.h
gr-projectCACHE/python/: CMakeLists.txt  PC_Error_Rate.py  __init__.py  qa_PC_Error_Rate.py  qa_map_header_payload_bc.py
gr-projectCACHE/swig/: projectCACHE_swig.i
matlab/: ber.ods  ber_data.m  ber_data_cxlb.m  curves_12344_awgn.m  curves_17nov.m  curves_2s3w.m  curves_33334_awgn.m  cxlb_tx_gain_0.fig
matlab/curves/: cxlb_awgn_12234_blind.m  cxlb_awgn_12234_wise.m  cxlb_awgn_12344_wise.m
matlab/curves/new/: cxlb_awgn_1strg_new.m  cxlb_awgn_2strg_new.m  cxlb_fading_1strg_new.m  cxlb_fading_2strg_new.m  cxlb_throughput.m
newschema/gr-projectCACHE/: CMakeLists.txt  MANIFEST.md
newschema/gr-projectCACHE/docs/: README.projectCACHE
newschema/gr-projectCACHE/examples/: coded_multicasting.py
newschema/gr-projectCACHE/grc/: CMakeLists.txt  projectCACHE_map_header_payload_bc.xml  projectCACHE_ofdm_frame_equalizer1_vcvc.xml
newschema/gr-projectCACHE/lib/: PolarDec_b_impl.h  crc32_1_bb_impl.h  map_header_payload_bc_impl.h  polarEnc_b_impl.cc
newschema/gr-projectCACHE/python/: PC_Error_Rate.py  __init__.py
newschema/gr-projectCACHE/swig/: CMakeLists.txt  projectCACHE_swig.i
newschema/project_caching/Trasmission Scheme/: polarcode_complete.py  rx_ofdm.py  test1_polarcode.grc  test_polarcode.grc  tx_ofdm.grc
newschema/project_caching/cache/: MakeCache  make_cache.cpp
newschema/project_caching/cxlb_uhd/: OFDM_RX.grc  OFDM_RX.py  OFDM_TX.grc  OFDM_TX.py
newschema/project_caching/environment/: Environment  environment.cpp  environment_file
project_caching/Trasmission Scheme/: 3w_2s.grc  NbCombineUsers.txt  OFDM_uhd.grc  OUT.txt  ofdm_3w_2s.py  ofdm_uhd.py  polarcode_complete.py  polarcode_ofdm_rx.grc  polarcode_ofdm_simul.py  polarcode_ofdm_simul2.py  polarcode_ofdm_simul3.py  polarcode_ofdm_simul_multi.py  polarcode_simulOFDM.grc  polarcode_simulOFDM2.grc  polarcode_simulOFDM3.grc  polarcode_simulOFDM_multi.grc  result.txt  test1_polarcode.grc
project_caching/cache/: MakeCache  environment_file  make_cache.cpp
project_caching/cxlb/: OFDM_RX.grc  OFDM_SINK.grc  OFDM_SINK.py  OFDM_TX.grc  OFDM_TX.py
project_caching/cxlb_no_uhd/: NbCombineUsers.txt  OFDM_RX.grc  OFDM_RX.py  OFDM_SINK.grc  OFDM_TX.grc  OFDM_TX.py
project_caching/cxlb_uhd/: OFDM_RX.grc  OFDM_RX.py  OFDM_SINK.grc  OFDM_SINK.py  OFDM_TX.grc  OFDM_TX.py
project_caching/cxlb_uhd_3w2s/: OFDM_RX.grc  OFDM_RX.py  OFDM_TX.grc  OFDM_TX.py
project_caching/environment/: Environment  environment.cpp  environment_file
project_caching/local_3w_2s/: NbCombineUsers.txt  OFDM_RX.grc  OFDM_RX.py  OFDM_TX.grc  OFDM_TX.py
project_caching/local_no_uhd/: NbCombineUsers.txt  OFDM_RX.grc  OFDM_RX.py  OFDM_TX.grc  OFDM_TX.py
project_caching/local_uhd/: NbCombineUsers.txt  OFDM_RX.grc  OFDM_RX.py  OFDM_SINK.grc  OFDM_SINK.py  OFDM_TX.grc
project_caching/repository/: file_1.xml  file_10.xml
project_caching/testTxRx/: TestTxRx  TestTxRx.cpp
project_caching/uhd/: OFDM_RX.grc  OFDM_RX.py  OFDM_TX.grc  OFDM_TX.py
project_caching_bkup_0712/Trasmission Scheme/: tx_ofdm.py
project_caching_bkup_0712/environment/: environment_file
project_caching_bkup_0712/local_no_uhd/: OFDM_TX.py
project_caching_bkup_0712/testTxRx/: TestTxRx.cpp
project_caching_bkup_0712/trasmissioni/: ERROR_RATE_0.txt  ERROR_RATE_1.txt  ERROR_RATE_4.txt
project_caching_bkup_3112/: README.txt
project_caching_bkup_3112/Trasmission Scheme/: coded_multicasting.grc  coded_multicasting.py  polar_code.py  polarcode_ofdm_rx.py  polarcode_ofdm_simul.py  polarcode_ofdm_tx.grc  polarcode_ofdm_tx.py  rx_ofdm.grc  test1_polarcode.grc
project_caching_bkup_3112/cxlb_uhd/: OFDM_TX.grc
project_caching_bkup_3112/environment/: environment.cpp
project_caching_bkup_3112/local_no_uhd/: OFDM_RX.py
project_caching_bkup_3112/trasmissioni/: ERROR_RATE_0.txt  ERROR_RATE_1.txt  ERROR_RATE_2.txt  ERROR_RATE_3.txt  ERROR_RATE_4.txt  bilan_liaison
(+297 files in other folders)
